--- a/q/275630.html
+++ b/q/275630.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>426</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
+<tr d-ix="0"><td>403</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
 <tr d-ix="1"><td>123</td><td>Nim</td><td>240923T090113Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275714#275714">Archar G</a></td></tr>
 <tr d-ix="2"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
 <tr d-ix="3"><td>076</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
@@ -41,8 +41,8 @@
 <tr d-ix="12"><td>087</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
 <tr d-ix="13"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>484</s> <s>468</s> <s>458</s> 426 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>use std::io::{stdin,stdout,Write};use termion::{clear,cursor::Left,event::Key::{Backspace,Char,Esc},input::TermRead,raw::IntoRawMode};fn main(){let (mut o, mut l)=(stdout().into_raw_mode().unwrap(), 0);for c in stdin().keys(){match c.unwrap(){Esc=&gt;break, Char(k)=&gt;{if k.is_digit(10){write!(o, &quot;*&quot;).unwrap();l+=1}}Backspace=&gt;{write!(o, &quot;{}{}&quot;, Left(1), clear::AfterCursor).unwrap();l-=1}_=&gt;()}o.flush().unwrap();if l&gt;3{break}}}
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>484</s> <s>468</s> <s>458</s> <s>426</s> 403 bytes</h1>
+<pre class="lang-rust prettyprint-override"><code>use std::io::{stdin,stdout,Write};use termion::{clear,cursor::Left,event::Key::{Backspace,Char},input::TermRead,raw::IntoRawMode};fn main(){let(mut o,mut l)=(stdout().into_raw_mode().unwrap(),0);for k in stdin().keys(){match k.unwrap(){Char(c)=&gt;{if c.is_digit(10){write!(o,&quot;*&quot;).unwrap();l+=1}}Backspace=&gt;{write!(o,&quot;{}{}&quot;,Left(1),clear::AfterCursor).unwrap();l-=1}_=&gt;()}o.flush().unwrap();if l&gt;3{break}}}
 </code></pre>
 <p>This solution uses <a href="https://crates.io/crates/termion" rel="nofollow noreferrer">Termion</a>, and so doesn't support Windows.</p>
 <p>I'm new to terminal manipulation so this probably isn't the most concise way to do this.</p>
@@ -51,17 +51,16 @@
 use termion::{
     clear,
     cursor::Left,
-    event::Key::{Backspace, Char, Esc},
+    event::Key::{Backspace, Char},
     input::TermRead,
     raw::IntoRawMode,
 };
 fn main() {
     let (mut o, mut l) = (stdout().into_raw_mode().unwrap(), 0);
-    for c in stdin().keys() {
-        match c.unwrap() {
-            Esc =&gt; break,
-            Char(k) =&gt; {
-                if k.is_digit(10) {
+    for k in stdin().keys() {
+        match k.unwrap() {
+            Char(c) =&gt; {
+                if c.is_digit(10) {
                     write!(o, &quot;*&quot;).unwrap();
                     l += 1
                 }
