--- a/q/129730.html
+++ b/q/129730.html
@@ -26,25 +26,49 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>026</td><td>MATL</td><td>170704T111906Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129764#129764">Luis Men</a></td></tr>
-<tr d-ix="1"><td>057</td><td>J</td><td>240905T060130Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/275364#275364">Conor O&</a></td></tr>
-<tr d-ix="2"><td>124</td><td>JavaScript Node.js</td><td>240905T005559Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/275361#275361">l4m2</a></td></tr>
-<tr d-ix="3"><td>022</td><td>Vyxal</td><td>240905T003124Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/275359#275359">emanresu</a></td></tr>
-<tr d-ix="4"><td>019</td><td>Jelly</td><td>201008T174749Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/212195#212195">caird co</a></td></tr>
-<tr d-ix="5"><td>038</td><td>05AB1E</td><td>201008T233850Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/212201#212201">SomoKRoc</a></td></tr>
-<tr d-ix="6"><td>155</td><td>Python 3</td><td>170704T111920Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129765#129765">Mr. Xcod</a></td></tr>
-<tr d-ix="7"><td>125</td><td>Python 3</td><td>170706T225257Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/130269#130269">EFT</a></td></tr>
-<tr d-ix="8"><td>026</td><td>Jelly</td><td>170704T135721Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129806#129806">PurkkaKo</a></td></tr>
-<tr d-ix="9"><td>170</td><td>JavaScript ES6</td><td>170704T232647Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129877#129877">Justin M</a></td></tr>
-<tr d-ix="10"><td>064</td><td>Octave</td><td>170704T100649Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129741#129741">Stewie G</a></td></tr>
-<tr d-ix="11"><td>211</td><td>PHP</td><td>170704T161113Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129821#129821">J&#246;r</a></td></tr>
-<tr d-ix="12"><td>129</td><td>R</td><td>170704T141732Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129807#129807">rturnbul</a></td></tr>
-<tr d-ix="13"><td>174</td><td>Python 2</td><td>170704T113146Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129769#129769">mdahmoun</a></td></tr>
-<tr d-ix="14"><td>198</td><td>LOGO</td><td>170704T103406Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129749#129749">DELETE_M</a></td></tr>
-<tr d-ix="15"><td>037</td><td>APL Dyalog</td><td>170704T100149Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129739#129739">Ad&#225;</a></td></tr>
-<tr d-ix="16"><td>027</td><td>Jelly</td><td>170704T091545Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129734#129734">Erik the</a></td></tr>
+<tr d-ix="0"><td>186</td><td>TIBasic</td><td>240929T182817Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/275869#275869">Youserna</a></td></tr>
+<tr d-ix="1"><td>026</td><td>MATL</td><td>170704T111906Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129764#129764">Luis Men</a></td></tr>
+<tr d-ix="2"><td>057</td><td>J</td><td>240905T060130Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/275364#275364">Conor O&</a></td></tr>
+<tr d-ix="3"><td>124</td><td>JavaScript Node.js</td><td>240905T005559Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/275361#275361">l4m2</a></td></tr>
+<tr d-ix="4"><td>022</td><td>Vyxal</td><td>240905T003124Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/275359#275359">emanresu</a></td></tr>
+<tr d-ix="5"><td>019</td><td>Jelly</td><td>201008T174749Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/212195#212195">caird co</a></td></tr>
+<tr d-ix="6"><td>038</td><td>05AB1E</td><td>201008T233850Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/212201#212201">SomoKRoc</a></td></tr>
+<tr d-ix="7"><td>155</td><td>Python 3</td><td>170704T111920Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129765#129765">Mr. Xcod</a></td></tr>
+<tr d-ix="8"><td>125</td><td>Python 3</td><td>170706T225257Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/130269#130269">EFT</a></td></tr>
+<tr d-ix="9"><td>026</td><td>Jelly</td><td>170704T135721Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129806#129806">PurkkaKo</a></td></tr>
+<tr d-ix="10"><td>170</td><td>JavaScript ES6</td><td>170704T232647Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129877#129877">Justin M</a></td></tr>
+<tr d-ix="11"><td>064</td><td>Octave</td><td>170704T100649Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129741#129741">Stewie G</a></td></tr>
+<tr d-ix="12"><td>211</td><td>PHP</td><td>170704T161113Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129821#129821">J&#246;r</a></td></tr>
+<tr d-ix="13"><td>129</td><td>R</td><td>170704T141732Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129807#129807">rturnbul</a></td></tr>
+<tr d-ix="14"><td>174</td><td>Python 2</td><td>170704T113146Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129769#129769">mdahmoun</a></td></tr>
+<tr d-ix="15"><td>198</td><td>LOGO</td><td>170704T103406Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129749#129749">DELETE_M</a></td></tr>
+<tr d-ix="16"><td>037</td><td>APL Dyalog</td><td>170704T100149Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129739#129739">Ad&#225;</a></td></tr>
+<tr d-ix="17"><td>027</td><td>Jelly</td><td>170704T091545Z</td><td><a href="https://codegolf.stackexchange.com/questions/129730/pad-a-matrix-with-its-sums/129734#129734">Erik the</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>27</s> 26 bytes</h1>
+<div id="pu0" class="pu"><h1>TI-Basic, 186 bytes</h1>
+<pre><code>Ans→[A]
+1+min(dim(Ans→D
+{Ans,Ans→dim([A]
+cumSum([A]ᵀ)ᵀ+cumSum([A]→[B]
+For(I,1,D-1
+For(J,1,D-1
+[A](I,J→[B](I,J
+End
+End
+For(I,1,2
+Matr►list([B],D,A
+List►matr(ʟA,[A]
+augment([A],[B])ᵀ→[B]
+End
+sum(seq(Ans(I,I)I,2,D→[B](1,1
+Ans→[B](D+1,D+1
+sum(seq(Ans(I,D+2-I)I,2,D→[B](1,D+1
+Ans→[B](D+1,1
+[B]
+</code></pre>
+<p>Takes input in <code>Ans</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>27</s> 26 bytes</h1>
 <pre><code>,!tXswyv]GXds5L(PGPXds5L(P
 </code></pre>
 <p><a href="https://tio.run/##y00syfn/X0exJKK4vLIs1j0ipdjURyPAPQDK@P8/2lDBVMHYWsFYwUjBxBpImCqYxgIA" rel="nofollow noreferrer" title="MATL – Try It Online">Try it online!</a> Or <a href="https://tio.run/##LY69CsJAEIR7n2KsYmHgZpNLclxrkcIihcVBCChYapUQ8enPObDYZZmfj30/tle@pzGfj1taP999GdNz9dfTNE7/I1d1XVfpcssz4dFENDC0UcvDL4fZaeREOFg5e1gLYgClWaMUelBSF9GiA9VX1CLoQAMDjIVLggPMixwKyIsi20pN0YA@itoJSJYvBBLWLT8" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -72,7 +96,7 @@ P        % Flip vertically again, to restore initial orientation
          % Implicitly display
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 57 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 57 bytes</h1>
 <pre><code>|:@(+/,],+/)^:2(-#:i.4)}~D,|.@D=:(1#.(&lt;0 1)&amp;|:),&lt;:@#{+//.
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LU47DoJAEO09xUSI7IZlf7IKKyQkEisre20MRG0sxEo08Rw2WHgGz-JtHLLkzWRm3pvf633qvmMe1JBbCJgECxIiDsvNevW5NnWU_NLWFiQUbMtCQXdWk8izRx7T-6NkLS_K3BLlcZJJUHTSWsoyW3i3UAg-LHjSUVNdmv5CtT-cC7KoB0YhfJCu0AgfCYMfaEdNEY7qMw0xugHjxBiBokFdg-pFJSGFOSQwwy6lcEShxSDdI13n4h8" rel="nofollow noreferrer">Attempt This Online!</a> Uses the trick for getting the column sums from Luis Mendo's <a href="https://codegolf.stackexchange.com/a/129764/31957">MATL answer</a>.</p>
@@ -109,7 +133,7 @@ NB. Let's refer to this as &quot;DOOD&quot; below, for succinctness.
                (      )}~      insert RHS at those indices in the modified matrix LHS
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 124 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 124 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;[1,...x,-2].map((a,i,z)=&gt;z.map((b,j)=&gt;(g=(i,j)=&gt;1/z[i+=x][j+=y]?z[i][j]+(x|y&amp;&amp;g(i,j)):0)(i,j-1,x=0|.1+z[i],y=0|.1+z[j])))
 </code></pre>
@@ -120,7 +144,7 @@ NB. Let's refer to this as &quot;DOOD&quot; below, for succinctness.
 </code></pre>
 <p><a href="https://tio.run/##JY7BboMwEER/Jb1Ethio14QAkZx8iOUDTQGB0jgKqALUf6drOO283dnR9NVvNdzf3WuMn/67XhuzTuZqFZIkmaBc8lO9hKjQYZHmuuz4hZ5BtEZ0m6LPxXaRmZztIzO7GxNLF4npbz4e280lL0oGERMm093ij2C6EGbTb9AzSCnXxr/FWA/jwTcHa61yDtYSMh4Keqcc@gRCAQprnSJDDuLVmfGEMyiFZrdmJAXSoBKakAYmUAGdQaPc0zKOYofeftleImdZcAxfiGUa8jieuzh598/BP@rk4VvRbE259D8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 22 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 22 bytes</h1>
 <pre><code>∑pǏ∩?₍Þ/Þ\ṠḂ&quot;?Ṡvjvw$j∩
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLiiJFwx4/iiKk/4oKNw54vw55cXOG5oOG4glwiP+G5oHZqdnckauKIqSIsIiIsIltbMSw1LDNdLFszLDIsNF0sWzIsNSw1XV0iXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -138,7 +162,7 @@ NB. Let's refer to this as &quot;DOOD&quot; below, for succinctness.
                      ∩ # Transpose again
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>24</s> 19 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>24</s> 19 bytes</h1>
 <pre><code>,U$⁺Æṭj€SW€j§,&quot;`j&quot;Ɗ
 </code></pre>
 <p><a href="https://tio.run/##TU8xCsJQDN1zivBxETo0v7baE3gAUQcRXFyKF3CrIhY8g84uuoiD1U1BvEZ7kW8SrXZI8v7j5b38ZDqbzZ3z@o1ycX2si/yYlMtDb8gtue89M0nMc@OK2/meP7PicmJeEI8B1yPrFvnqtS/TbZnuGDYr7NwIjDFAiBhyBRBwt1wtsF8uFIWnMv8PiXkfbY1oy2aLG4obdgSEYMVQfVAEJAKKAFUYyUMTfWkWSCZJMsXCqFMAJJPE0aqTCDCuZYe/WN21H391w1izQQ/SRL2GCDCo4vUq1N/B@A0" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -170,7 +194,7 @@ NB. Let's refer to this as &quot;DOOD&quot; below, for succinctness.
            j        - Insert the rows plus their sums in between the diagonal and column sums
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 38 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 38 bytes</h1>
 <pre><code>ODŠζsζ€R€˜IÅ\OUIÅ/OVIÅ|ODXšYªsXªYšŠšsª
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/f3@XognPbis9te9S0JgiIT8/xPNwa4x8KJPX9w4Bkjb9LxNGFkYdWFUccWhV5dOHRBUcXFh9a9f9/dLShjmmsTrSBjlFsLAA" rel="nofollow noreferrer">Try it online!</a></p>
@@ -194,7 +218,7 @@ OD                                            Sum of rows and duplicate
                                   Ššsª        Append and Prepend the new rows (first and last)
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 155 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 155 bytes</h1>
 
 <p>This is the suggestion of @LeakyNun, which saves <strong>54 bytes</strong>. I then golfed it myself a bit.</p>
 
@@ -214,7 +238,7 @@ OD                                            Sum of rows and duplicate
 
 <p><a href="https://tio.run/##ZU/JboMwEL3nK@YI8kSKTclSxJdYPkCA1hE4kUkP@XryBldKFwnj8Vvt2@P@eQ3FsnT9QEM25e9jPfYBQxV5rmMTPvpszHn@mqqGWz5zV8/ZZL3DN1wjefKBIgQJHLd@q38R9pu5rOgloS@B@yPwL0HSuuoWfbhn1jZOdcq2zilrz3A4JT6V5h@JoNtV2jiXLwOc@sBk3pg00xH/EqWmYCqZQGgh9oCw7zGCMDssA0hj0AbrBADuQjDsGjEGdlAnlGzSFfPNWlauReJCBEmsxCDhIMfj2iIaLcciNcoldv@SoBON3Eae8gQ" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 125 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 125 bytes</h1>
 
 
 
@@ -236,7 +260,7 @@ def f_expanded(m):
 
 <p>This takes input formatted as a numpy array, then uses the <code>np.c_</code> and <code>np.r_</code> indexing tools to build a new array in one go. <code>np.trace</code> and <code>np.sum</code>are used to calculate the sums along the diagonals and everywhere else, respectively. <code>T</code> is used to take the transpose before and after concatenating the sums because it's shorter than making all the arrays 2-dimensional and using <code>np.r_</code>. <code>m[::-1]</code> saves bytes when compared to <code>rot90(m)</code> or <code>fliplr(m)</code> for finding the trace for the second diagonal.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 26 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 26 bytes</h1>
 <pre><code>ŒDµḊṖÑµ€1¦ŒḌU
 S;;S
 Ç€Zµ⁺ÑÑ
@@ -272,7 +296,7 @@ S         Sum the argument list.
             U      Reverse each row, so that consecutive calls fix the other corners.
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1>JavaScript (ES6), 170 bytes</h1>
+<div id="pu10" class="pu"><h1>JavaScript (ES6), 170 bytes</h1>
 
 
 
@@ -313,7 +337,7 @@ let tests=[[[0]],[[1,5],[0,2]],[[17,24,1,8,15],[23,5,7,14,16],[4,6,13,20,22],[10
 </div>
 </p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a>, 64 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a>, 64 bytes</h1>
 
 <p>Thanks to Tom Carpenter for both saving 4 bytes, <em>and</em> correcting an error I had in the original code!</p>
 
@@ -344,7 +368,7 @@ let tests=[[[0]],[[1,5],[0,2]],[[17,24,1,8,15],[23,5,7,14,16],[4,6,13,20,22],[10
 
 <p><sub>Note, I wrote this long after I posted the challenge.</sub></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://php.net/" rel="nofollow noreferrer">PHP</a>, 211 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://php.net/" rel="nofollow noreferrer">PHP</a>, 211 bytes</h1>
 
 
 
@@ -371,14 +395,14 @@ $o[]=[-1=&gt;$h]+$x+[$z=&gt;$d]; # add to result array the last array
 print_r([-1=&gt;[-1=&gt;$d]+$x+[$z=&gt;$h]]+$o); #output after adding the first array to the result array
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h1>R, 129 bytes</h1>
+<div id="pu13" class="pu"><h1>R, 129 bytes</h1>
 
 <pre><code>pryr::f(t(matrix(c(d&lt;-sum(diag(m)),c&lt;-colSums(m),a&lt;-sum(diag(m[(n&lt;-nrow(m)):1,])),t(matrix(c(r&lt;-rowSums(m),m,r),n)),a,c,d),n+2)))
 </code></pre>
 
 <p>An anonymous function that takes a square matrix as input. I'll post an explanation if there's interest.</p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>268</s> <s>250</s> <s>184</s> 174 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>268</s> <s>250</s> <s>184</s> 174 bytes</h1>
 
 <p>10 thanks to Stewie Griffin</p>
 
@@ -395,7 +419,7 @@ print hstack((v(([[d]],r,[[e]])),v((l,s,l)),v(([[e]],r,[[d]])))).tolist()
 <p><strong>Some explanations</strong>
 The input is uploaded as a matrix. First the code computes the sum of each column and each row using numpy.sum. Then it computes the sum of the diagonal by numpy.trace. After this it obtains the other diagonal by making a left-right flip on the matrix. Finally, it uses numpy.vstack and numpy.hstack to glue the pieces together.</p>
 </div>
-<div id="pu14" class="pu"><h2><a href="https://sourceforge.net/projects/fmslogo/" rel="nofollow noreferrer">LOGO</a>, 198 bytes</h2>
+<div id="pu15" class="pu"><h2><a href="https://sourceforge.net/projects/fmslogo/" rel="nofollow noreferrer">LOGO</a>, 198 bytes</h2>
 <pre><code>to g :v[:h reduce &quot;+ :v]
 op(se :h :v :h)
 end
@@ -405,7 +429,7 @@ end
 </code></pre>
 <p>The function <code>f</code> takes in a matrix as a 2D list, then output the resulting matrix. <code>g</code> is helper function.</p>
 </div>
-<div id="pu15" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog)</a>, 37 bytes</h1>
+<div id="pu16" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog)</a>, 37 bytes</h1>
 
 
 
@@ -430,7 +454,7 @@ end
 
 <p> <code>d,+⌿,d∘⌽</code> applied to the argument, column sums, <em>d</em> applied to the reversed argument</p>
 </div>
-<div id="pu16" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 27 bytes</h1>
+<div id="pu17" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 27 bytes</h1>
 
 <pre><code>,UŒDḢ$S$€,Ṛ$j€SW€jSẋ¥€2$j"$
 </code></pre>
