--- a/q/275853.html
+++ b/q/275853.html
@@ -26,16 +26,50 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Nekomata</td><td>240929T080511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275867#275867">alephalp</a></td></tr>
-<tr d-ix="1"><td>086</td><td>Arturo</td><td>240928T231918Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275864#275864">chunes</a></td></tr>
-<tr d-ix="2"><td>085</td><td>JavaScript Node.js</td><td>240928T222801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275863#275863">l4m2</a></td></tr>
-<tr d-ix="3"><td>091</td><td>JavaScript ES6</td><td>240928T214333Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275861#275861">Arnauld</a></td></tr>
-<tr d-ix="4"><td>018</td><td>Vyxal</td><td>240928T201043Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275860#275860">emanresu</a></td></tr>
-<tr d-ix="5"><td>016</td><td>Jelly</td><td>240928T190640Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275859#275859">Unrelate</a></td></tr>
-<tr d-ix="6"><td>034</td><td>Charcoal</td><td>240928T184702Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275858#275858">Neil</a></td></tr>
+<tr d-ix="0"><td>034</td><td>Charcoal</td><td>240928T184702Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275858#275858">Neil</a></td></tr>
+<tr d-ix="1"><td>012</td><td>Nekomata</td><td>240929T080511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275867#275867">alephalp</a></td></tr>
+<tr d-ix="2"><td>086</td><td>Arturo</td><td>240928T231918Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275864#275864">chunes</a></td></tr>
+<tr d-ix="3"><td>085</td><td>JavaScript Node.js</td><td>240928T222801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275863#275863">l4m2</a></td></tr>
+<tr d-ix="4"><td>091</td><td>JavaScript ES6</td><td>240928T214333Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275861#275861">Arnauld</a></td></tr>
+<tr d-ix="5"><td>018</td><td>Vyxal</td><td>240928T201043Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275860#275860">emanresu</a></td></tr>
+<tr d-ix="6"><td>016</td><td>Jelly</td><td>240928T190640Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275859#275859">Unrelate</a></td></tr>
 <tr d-ix="7"><td>060</td><td>R</td><td>240928T182326Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275856#275856">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 12 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 34 bytes</h1>
+<pre><code>⊞υＥ³ＮＦＮＦ⮌υＦ³⊞υＥκ⁺μ⁼λνＩ⌈Ｅυ⁺ΣＸι²×⁷⌊ι
+</code></pre>
+<p><a href="https://tio.run/##VY0xDsIwDEV3TuHRlsxAOzB0RAwMRRFwgVAFNSJJS1IXbh9KAQn@5if/95tWx6bTLmclqUVhqHWPJcMu9DLsxZ9NRCKqFpcuAv5TmNnBjCYmg/IFJcGv7MqgnCT0DNubaJfQMQSapSraMOBGpwFr/bBePL4q8qkcp1t192nMMhREDCfrTcL1ZLZhfrf0TpVzCQWsoMjL0T0B" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>⊞υＥ³Ｎ
+</code></pre>
+<p>Input the numbers of each of the scientific symbols as a list and push them to the list of lists.</p>
+<pre><code>ＦＮ
+</code></pre>
+<p>Loop over the number of special actions.</p>
+<pre><code>Ｆ⮌υＦ³⊞υＥκ⁺μ⁼λν
+</code></pre>
+<p>Generate all possibilities of an extra scientific symbol and add them to the list of lists of symbols.</p>
+<pre><code>Ｉ⌈Ｅυ⁺ΣＸι²×⁷⌊ι
+</code></pre>
+<p>Calculate the score of each of the lists and take the maximum.</p>
+<p>In the case of one special action, it seems to be optimal to add it to your largest symbol, except in the case where the there is a unique smallest symbol and the difference between the largest and smallest symbol is less than <code>4</code>, in which case you should add it to your smallest symbol. As a table:</p>
+<pre><code>x+1 x+1 x 1 -&gt; x+1 x+1 x+1
+x+2 x+1 x 1 -&gt; x+2 x+1 x+1
+x+2 x+2 x 1 -&gt; x+2 x+2 x+1
+x+3 x+1 x 1 -&gt; x+3 x+1 x+1
+x+3 x+2 x 1 -&gt; x+3 x+2 x+1
+x+3 x+3 x 1 -&gt; x+3 x+3 x+1
+</code></pre>
+<p>Otherwise, increment the largest value. In the case of two special actions, repeating the above is optimal except in two cases; when the largest symbol is exactly one more than the other two then you should add one each to the latter, while when the largest symbol is exactly two more than the middle symbol and three more than the smallest symbol in which case you should add both to your largest symbol. As a table:</p>
+<pre><code>x+1 x   x 2 -&gt; x+1 x+1 x+1
+x+1 x+1 x 2 -&gt; x+2 x+1 x+1
+x+2 x+1 x 2 -&gt; x+3 x+1 x+1
+x+2 x+2 x 2 -&gt; x+2 x+2 x+2
+x+3 x+2 x 2 -&gt; x+3 x+2 x+2
+x+3 x+3 x 2 -&gt; x+3 x+3 x+2
+</code></pre>
+<p>Otherwise, add two to the largest value. Note that the exceptions mentioned above are the first row of the above table and also <code>x+3 x+1 x</code> which should become <code>x+5 x+1 x</code> instead of <code>x+4 x+1 x+1</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 12 bytes</h1>
 <pre><code>ᵑʰ→::∙$ṁ7*+Å
 </code></pre>
 
@@ -65,7 +99,7 @@
 </code></pre>
 <p>The other part is the same as the previous solution.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 86 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 86 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>f:$[a,z]-&gt;?z=0-&gt;+∑map a=&gt;[&amp;^2]7*min a-&gt;max map 3'i[f map 3'j-&gt;+?i=j-&gt;1-&gt;0a\[j-1]z-1]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?vGimBO" rel="nofollow noreferrer">Try it!</a></p>
@@ -85,7 +119,7 @@ f map 3'j-&gt;...z-1  ; call f on &lt;map over 1..3 and call it j&gt; and z-1
 a\[j-1]            ; to a[j-1]
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 85 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 85 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(a,b,c,z)=&gt;z?Math.max(f(b,c,a,z-=.25),f(a+1,b,c,~~z)):a*a+b*b+c*c+7*Math.min(a,b,c)
 </code></pre>
@@ -103,13 +137,13 @@ a\[j-1]            ; to a[j-1]
 :a*a+b*b+c*c+7*Math.min(a,b,c)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript (ES6), 91 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(a,b,c,z,r=2)=&gt;z?Math.max(f(a+1,b,c,z-1),r&amp;&amp;f(b,c,a,z,r-1)):a*a+b*b+c*c+7*Math.min(a,b,c)
 </code></pre>
 <p><a href="https://tio.run/##fZJBboMwEEX3OcWsIhscFNuBREVOV132BBEL40CTiuIKaFVR9ezUDg0BAhXIgnl//h9GvMpPWari/F6tcn1MmiYVSJKYKFKTQjAs9vXjs6xO3pv8QimSLm3himJSLJcpsm/Sik0FP0hHurETu8pR7tZpG89564ib8LAAOJhrTcAn9lxDRID55rwRcwd/hAcD0vbQMeHGwpSvbvRGNkOyG/TwHrlzY9cJ6EQOHRN/kMO3gwl6OZyPZ@tydhNT0wky42bKm1nCeznBxA7uNjo/279u7AJnCJv4nm6j7EoWkZfq4kmqE0JWIQnEBBSB2ir0RwURBrGHb@OQJRUUSQkCzI/Z6XBokNJ5qbPEy/QLMpJLJ2nFwj4b0Q8Om18" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 18 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 18 bytes</h1>
 <pre><code>3Þ□↔Ṡ$v+ƛ²∑ng7*+;G
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIzw57ilqHihpThuaAkdivGm8Ky4oiRbmc3Kis7RyIsIiIsIjFcbls0LCAyLCAxXSJd" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -126,7 +160,7 @@ a\[j-1]            ; to a[j-1]
                  G # Take the largest value
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>19</s> 16 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>19</s> 16 bytes</h1>
 <pre><code>3ṗ‘ṛ¦ƒ€µṂ×7+ḋ`)Ṁ
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/9/44c7pjxpmPNw5@9CyY5MeNa05tPXhzqbD0821H@7oTtB8uLPh/8PdWw5tPTr54c7Fjxr36dodnRQGVHZ4ucPDnatUbA8t1deM/P9fw0BHwVRHAUgaaCro2ikYmXKBhIDIDCZkbMaFUGUIFzLWUTAC8uEaDbk0TNCELMCqjJGF4BqN4MYbIpllCBcyRTXL2BxsPLJZxsYwGxFmWSA5whBZCF0jkG@CKWSMbJYZkusR3sZiI3aNRmBRdCEjZHfBvW0EFQIA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -141,24 +175,6 @@ a\[j-1]            ; to a[j-1]
            +ḋ`      and add that to the sum of squares.
                Ṁ    Take the maximum of those results.
 </code></pre>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 34 bytes</h1>
-<pre><code>⊞υＥ³ＮＦＮＦ⮌υＦ³⊞υＥκ⁺μ⁼λνＩ⌈Ｅυ⁺ΣＸι²×⁷⌊ι
-</code></pre>
-<p><a href="https://tio.run/##VY0xDsIwDEV3TuHRlsxAOzB0RAwMRRFwgVAFNSJJS1IXbh9KAQn@5if/95tWx6bTLmclqUVhqHWPJcMu9DLsxZ9NRCKqFpcuAv5TmNnBjCYmg/IFJcGv7MqgnCT0DNubaJfQMQSapSraMOBGpwFr/bBePL4q8qkcp1t192nMMhREDCfrTcL1ZLZhfrf0TpVzCQWsoMjL0T0B" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
-<pre><code>⊞υＥ³Ｎ
-</code></pre>
-<p>Input the numbers of each of the scientific symbols as a list and push them to the list of lists.</p>
-<pre><code>ＦＮ
-</code></pre>
-<p>Loop over the number of special actions.</p>
-<pre><code>Ｆ⮌υＦ³⊞υＥκ⁺μ⁼λν
-</code></pre>
-<p>Generate all possibilities of an extra scientific symbol and add them to the list of lists of symbols.</p>
-<pre><code>Ｉ⌈Ｅυ⁺ΣＸι²×⁷⌊ι
-</code></pre>
-<p>Calculate the score of each of the lists and take the maximum.</p>
-<p>At least in the case of one special action, it seems to normally be optimal to add it to your largest symbol, except in the case where the there is a unique smallest symbol and the difference between the largest and smallest symbol is less than <code>4</code>, in which case you should add it to your smallest symbol.</p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 60 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>f=\(x,z)`if`(z,max(apply(x+diag(3),2,f,z-1)),x%*%x+7*min(x))
