--- a/q/275871.html
+++ b/q/275871.html
@@ -26,10 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
-<tr d-ix="1"><td>031</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
+<tr d-ix="0"><td>158</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
+<tr d-ix="1"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
+<tr d-ix="2"><td>031</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 25 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 158 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>t=lambda s:(r:=len(s)//2)and[l.center(r*2+1)for l in[s[r]]+['/'+' '*i+'\\'for i in range(1,r,2)]]+[i+' '+j for i,j in zip(t(s[:r]),t(s[r+1:]))]if s[1:]else[s]
+</code></pre>
+<p><a href="https://tio.run/##HctBDoIwEIXhq3Q3HUog4MaQeJLSRZWCg3Ug02708kjd/cn73v7Jz40v112OI9@if98nr9KgZbjFwDph2/boebKxeQTOQbRUvelw3kRFRWyTFeeMhRYMKKjIwDhCWelclXhegu5qqXssjAoyq/qDei3kS7vOOtlBHNYlxHSDQ3Q0q2TPDDEFm9yxC3HWMDI060Z8nsDfH1OYlyetr/jmDRDx@AE" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 25 bytes</h1>
 <pre><code>Ｆ²ＦＬθ«Ｊκ⁻¹＆⊕κ±⊕κ¿ι§θκＰ^±ⅉ
 </code></pre>
 <p><a href="https://tio.run/##XU67DoIwFJ3hK@54m@Cgo0y4YcQ4uLiYNHCBhtJCe/ER47dXZHDwLCc5r5yyla60UodQWwe4EbDwgUzDLY5CwCuO9lM/nC12CRTKTB7XCewU35WnzFSYm9JRT4apwk4kcKRGMv3JX6RxpGpAJeDklGHMODcVPXBMYA6kQNoTFJNmNSz@9vobu@DSf4fArfJMnkvpqZVe6uXprDp@WkNhddMf" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -53,7 +60,7 @@
 <p>On the first pass, draw <code>/</code> and <code>\</code> diagonals down to the bottom line.</p>
 <p>Due to a bug in Charcoal, replacing <code>⁻¹</code> with <code>±</code> results in an extra trailing line of spaces.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 31 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 31 bytes</h1>
 <pre><code>Jm2æḟ2Ḥ%@þJ=J€$ḤṚ|Ɗị&quot;Ø^;;⁶Ʋ€UZY
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/98r1@jwsoc75hs93LFE1eHwPi9br0dNa1SAvIc7Z9Uc63q4u1vp8Iw4a@tHjduObQJKhUZF/n@4e8vhdiA761HjPi6u//8TuZKSU7gygCbml@dzJQI5qWnpGZlZ2Tm5eflcJRmZxSWpxSXJicWpGYnFiTmpeeklGUDRopLK/LxUAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
